# mgv033.2-fdz-viu-tfm

./: .gitignore  LICENSE  README.ipynb  README.md
training/snake_make_scratch/: docker-compose.yml  environment.yml
training/snake_make_scratch/backend/: Dockerfile  pyproject.toml  requirements.txt
training/snake_make_scratch/dash_app/: Dockerfile  pyproject.toml
training/snake_make_scratch/split_lines_add_numbers/: README.md  Snakefile  main.py
training/snake_make_scratch/split_lines_add_numbers/scripts/: main.py
workspace/: README.ipynb  TFM_Python_review_20230610_pmg.ipynb  initialization_script.sh
workspace/DATA/: TFM_database.xlsx
workspace/DATA/raw_data/: README.md  TFM_database.xlsx
workspace/code/: README.md  project_template_generator.sh
workspace/code/pyThrotein/analysis/: README.md
workspace/code/pyThrotein/analysis/figures/: README.md
workspace/code/pyThrotein/analysis/tables/: README.md
workspace/code/pyThrotein/config/: Dockerfile  README.md  db_model-ori.sql  docker-compose.yaml  requirements.txt
workspace/code/pyThrotein/config/etl-snakemake/: Dockerfile
workspace/code/pyThrotein/data/annotations/: README.md
workspace/code/pyThrotein/data/processed_data/: README.md
workspace/code/pyThrotein/data/raw_data/: README.md  TFM_database.xlsx
workspace/code/pyThrotein/documentation/: README.md  changelog.txt  notes.txt  requirements_prj.txt
workspace/code/pyThrotein/documentation/docs/: README.md
workspace/code/pyThrotein/results/figures/: README.md
workspace/code/pyThrotein/results/reports/: README.md
(+16 files in other folders)
