[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["franciscozgz <143352076+tfm-viu-fdz@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.1"
pydantic = "^2.3.0"
uvicorn = "^0.23.2"
conda-lock = "^2.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
