[tool.poetry]
name = "dash-app"
version = "0.1.0"
description = ""
authors = ["franciscozgz <143352076+tfm-viu-fdz@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
dash = "^2.13.0"
pandas = "2.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
